--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </tr>
   </table>
 
-<p style=text-align:center>Každé z etap se zúčastnil jiný počet účastníků, a tedy na ní byl získán jiný počet bodů. Průměrný počet bodů na každou etapu lze zobrazit vhodným kartogramem<br>nebo kartodiagramem. Data z webu <a href="http://www.trailtour.cz/2020">TT</a> lze jednoduše zobrazit, jako ta dělá třeba <a href="https://uustravamaing01.ew.r.appspot.com/uu-strava-maing01/9cb6f576dcb44633b5d7e5afd9384a49/trailtour?year=2020_CZ">tahle</a> nebo <a href="https://trailtour2020.herokuapp.com/home">tahle</a> appka.
+<p style=text-align:center>Každé z etap se zúčastnil jiný počet účastníků, a tedy na ní byl získán jiný počet bodů. Průměrný počet bodů na každou etapu lze zobrazit vhodným kartogramem<br>nebo kartodiagramem. Data z webu <a href="http://www.trailtour.cz/2020">TT</a> lze jednoduše zobrazit, jako ta dělá třeba <a href="https://uustravamaing01.ew.r.appspot.com/uu-strava-maing01/9cb6f576dcb44633b5d7e5afd9384a49/trailtour?year=2020_CZ">tahle</a> nebo <a href="https://trailtour2020.herokuapp.com/home">tahle</a> appka. Celý projekt bude zveřejněn na <a href="https://borekj.github.io/">této</a> adrese.
 </p>
 <p>Takhle vypadá mapa etap: </p>
 <img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="900" height="600">
