--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p style=text-align:center><strong>Trail Tour</strong> je virtuální běžecká soutěž pořádaná značkou Inov-8. Po celé republice je rozmístěno 50 etap,<br> kde běžci závodí. Svůj výkon nahrávají pomocí GPS hodinek, které poté synchronizují s aplikací Strava,<br>odkud se přes API protokol data přesouvají na server Trailtour. Ten z průměrů prvních třech závodníků <br>spočítá 150 bodů a dopočítává bodový zisk všech dalších. Závodníkům se během celé doby sčítají<br>bodové zisky, které se počítají i do bodové soutěže. Soutěž končí 20.10.2020.
 </p>
 
-<h2>Aktuální pořadí je:</h2>
+<h2>Aktuální pořadí je (k 12.10.2020):</h2>
 
 <table style="width:60%">
     <tr>
@@ -60,7 +60,7 @@
 <p style=text-align:center>Každé z etap se zúčastnil jiný počet účastníků, a tedy na ní byl získán jiný počet bodů. Průměrný počet bodů na každou etapu lze zobrazit vhodným kartogramem<br>nebo kartodiagramem. Data z webu <a href="http://www.trailtour.cz/2020">TT</a> lze jednoduše zobrazit, jako ta dělá třeba <a href="https://uustravamaing01.ew.r.appspot.com/uu-strava-maing01/9cb6f576dcb44633b5d7e5afd9384a49/trailtour?year=2020_CZ">tahle</a> nebo <a href="https://trailtour2020.herokuapp.com/home">tahle</a> appka. Celý projekt bude zveřejněn na <a href="https://borekj.github.io/">této</a> adrese.
 </p>
 <p>Takhle vypadá mapa etap: </p>
-<img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="900" height="500">
+<img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="714" height="429">
 
   </body>
 </html>
