--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             h2 {font-family:arial; font-size: 20px;}
             table, th, td {border: 1px solid black; border-collapse: collapse;}
             th, td {padding: 3px;text-align: center;}
+            .spoiler {color: white;}
+            .spoiler:hover {color: black;}
         </style>
     </head> 
     <body>
@@ -56,6 +58,8 @@
       <td>84205.43</td>
     </tr>
   </table>
+
+<div class="spoiler"><p>Spoiler: autor se soutěže sám účastní.</p></div>
 
 <p style=text-align:center>Každé z etap se zúčastnil jiný počet účastníků, a tedy na ní byl získán jiný počet bodů. Průměrný počet bodů na každou etapu lze zobrazit vhodným kartogramem<br>nebo kartodiagramem. Data z webu <a href="http://www.trailtour.cz/2020">TT</a> lze jednoduše zobrazit, jako ta dělá třeba <a href="https://uustravamaing01.ew.r.appspot.com/uu-strava-maing01/9cb6f576dcb44633b5d7e5afd9384a49/trailtour?year=2020_CZ">tahle</a> nebo <a href="https://trailtour2020.herokuapp.com/home">tahle</a> appka. Celý projekt bude zveřejněn na <a href="https://borekj.github.io/">této</a> adrese.
 </p>
