--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
         initial-scale=1.0">
         <meta name="Zobrazení TT etap na mapě" content="Zobrazení TT etap na mapě">
         <title>Zobrazení TT etap na mapě</title>
-        <style>
-            body {background: #ffffff; font-family:arial; font-size: 14px;}
-            h1 {font-family:Arial; font-size: 35px; text-align:center;}
-            h2 {font-family:arial; font-size: 20px;}
-            table, th, td {border: 1px solid black; border-collapse: collapse;}
-            th, td {padding: 3px;text-align: center;}
-            .spoiler {color: white;}
-            .spoiler:hover {color: black;}
-        </style>
+        <link rel="stylesheet" type="text/css" href="./style.css" />
     </head> 
     <body>
    
