--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     </head> 
     <body>
    
-    
+
     
 
 <h1>Zobrazení průměrného zisku etap TT v mapě</h1>
+
+<img src="https://github.com/borekj/borekj.github.io/blob/main/Trailtour.jpg?raw=true" alt="Mapa etap" class="logo" width = "100%" >
+
+
 <div class="text">
 <p><strong>Trail Tour</strong> je virtuální běžecká soutěž pořádaná značkou Inov-8. Po celé republice je rozmístěno 50 etap, kde běžci závodí. Svůj výkon nahrávají pomocí GPS hodinek, které poté synchronizují s aplikací Strava,odkud se přes API protokol data přesouvají na server Trailtour. Ten z průměrů prvních třech závodníků ppočítá 150 bodů a dopočítává bodový zisk všech dalších. Závodníkům se během celé doby sčítají bodové zisky, které se počítají i do bodové soutěže. Soutěž končí 20.10.2020.
 </p>
 </div>
+
+
 
 <h2>Aktuální pořadí je (k 12.10.2020):</h2>
 
