--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
 <p><strong>Trail Tour</strong> je virtuální běžecká soutěž pořádaná značkou Inov-8. Po celé republice je rozmístěno 50 etap, kde běžci závodí. Svůj výkon nahrávají pomocí GPS hodinek, které poté synchronizují s aplikací Strava,odkud se přes API protokol data přesouvají na server Trailtour. Ten z průměrů prvních třech závodníků ppočítá 150 bodů a dopočítává bodový zisk všech dalších. Závodníkům se během celé doby sčítají bodové zisky, které se počítají i do bodové soutěže. Soutěž končí 20.10.2020.
 </p>
 </div>
-<svg height="210" width="500">
-  <polygon points="10,10 250,190 160,210"
-  ,→ style="fill:lime;stroke:purple;stroke-width:1" />
-  Sorry, your browser does not support inline SVG.
-  </svg>
-  
+
+
+  <object id="districts" type="image/svg+xml"
+  ,→ data="https://raw.githubusercontent.com/borekj/borekj.github.io/9f42c9aef963e8d01567608a78ac595cc1ecd900/logo.svg"></object>  
 
 
 
