--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
 </div>
 
 
-  <object id="districts" type="image/svg+xml"
-  ,→ data="https://raw.githubusercontent.com/borekj/borekj.github.io/9f42c9aef963e8d01567608a78ac595cc1ecd900/logo.svg"></object>  
-
-
 
 <h2>Aktuální pořadí je (k 12.10.2020):</h2>
 
@@ -73,5 +69,8 @@
 
 <img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="714" height="429" class="mapa">
 
+<div class="loga">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="100  " height="100"> <img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="150  " height="150"> <img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="200" height="200">
+</div>
   </body>
 </html>
