--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head> 
     <body>
-   
-
-    
-
-
 <img src="https://github.com/borekj/borekj.github.io/blob/main/Trailtour_2.jpg?raw=true" alt="Mapa etap" class="logo" width = "100%">
+
+<div class="container">
+  <div><a href="#odkaz">Mapa</a></div>
+  <div><a href="#odkaz2">Příběh</a></div>
+  <div><a href="#odkaz3">Logo</a></div>
+</div>
+
+
+<div class="spoiler"><p>Odkazy budou doplněny příště, protože je 3.11. 23:45 a já se bojím, že už bych to nestihl.</p></div>
+<div class="text">
 
 <h1>Zobrazení průměrného zisku etap TT v mapě</h1>
 
-<div class="text">
+
 <p><strong>Trail Tour</strong> je virtuální běžecká soutěž pořádaná značkou Inov-8. Po celé republice je rozmístěno 50 etap, kde běžci závodí. Svůj výkon nahrávají pomocí GPS hodinek, které poté synchronizují s aplikací Strava,odkud se přes API protokol data přesouvají na server Trailtour. Ten z průměrů prvních třech závodníků ppočítá 150 bodů a dopočítává bodový zisk všech dalších. Závodníkům se během celé doby sčítají bodové zisky, které se počítají i do bodové soutěže. Soutěž končí 20.10.2020.
 </p>
 </div>
 
 
 
-<h2>Aktuální pořadí je (k 12.10.2020):</h2>
+<h2>Aktuální pořadí je (k 20.10.2020):</h2>
 
 <table>
     <tr>
@@ -35,27 +40,27 @@
     </tr>
     <tr>
       <td>Miloš Nykodým</td>
-      <td>7551.35</td>
+      <td>7540.57</td>
       <td>Natalia Hiklova</td>
-      <td>7216.86</td>
+      <td>7362.57</td>
       <td>SK Žabovřesky Brno</td>
-      <td>124152.06</td>
+      <td>162022.926</td>
     </tr>
     <tr>
       <td>Jakub Glonek</td>
-      <td>6989.56</td>
-      <td>Veronika Siebeltová</td>
-      <td>6988.77</td>
+      <td>6316.44</td>
+      <td>Petra Vavříková</td>
+      <td>7284.08</td>
       <td>KOS TESLA Brno</td>
-      <td>123648.45</td>
+      <td>148229.575</td>
     </tr>
     <tr>
       <td>Jan Schulhof</td>
-      <td>6798.91</td>
-      <td>Petra Vavříková</td>
-      <td>6988.08</td>
+      <td>7278.88</td>
+      <td>Veronika Siebeltová</td>
+      <td>7208.09</td>
       <td>SK Kamenice</td>
-      <td>84205.43</td>
+      <td>92048.94</td>
     </tr>
   </table>
 
@@ -69,8 +74,27 @@
 
 <img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="714" height="429" class="mapa">
 
+<div class="text" id="odkaz">
+  <p>Celkové statistiky Trailtour jsou vskutku impresivní. Závodníci naběhali celkem 72279 kilometrů, 2 255 785 vertikálních metrů a 290 dnů a 17 hodin během 8591 běhů. Jestli je ale jedna kategorie, která se opravdu vyhrotila, tak to byla soutěž českých klubů...
+  <input type=checkbox id="show">
+  
+  <u><label for="show" style="color:blue">Pokračovat?</label></u>
+
+  <span id="content"></br>Během posledních dvou týdnů spolu totiž zápasily dva brněnské kluby, Žabovřesky Brno a Tesla Brno. Za posledních 10 dní naběhali (každý) 3000 kilometrů a 10 dní člověkoběhů. Nebylo výjimkou, že někdo naběhal i 80 kilometrů za víkend – v závodním tempu. Každý bod hrál roli. V Tesle (za kterou běhám já) jsme o víkendu vypravili 30 lidí a 8 aut na pražské etapy, Žabiny zase v posledním týdnu posílaly jedno auto za druhým na krátké etapy na Moravu. Účastnil se každý, kdo měl nohy, v obou týmech to bylo přes 90 lidí. Někteří dali za posledních 10 dnů třeba 26 etap. Jezdilo se do Sokolova, na Šumavu, do Ústí nad Labem i do Rychlebek. Zkrátka všude, každý tam, kde mohl ještě přinést nejvíc bodů.</br></br>
+    Nebylo vůbec výjimkou vstávat v 5 ráno, ujet za den 700 km v autě a k tomu naběhat maraton během 5 etap za den – něco, co by nám na jaře zabralo aspoň tři dny. Poslední etapy se pravidelně běhaly s čelovkami. Nebudu počítat, kolik hektolitrů benzínu se spálilo, ale já sám jsem za posledních 10 dní najezdil 3000 a naběhal 210 km. Ekologické? Těžko. Náročné? Určitě. Zábavné? Neskutečně. Motivace konečně někoho porazit hnala dopředu úplně všechny. Bylo přitom skoro jedno, jestli má člověk za etapu 100 nebo 140 bodů, důležité byla hlavně kvantita.</br></br>
+
+    V Tesle jsme nakonec skončili druzí, ale to nám nevadilo. Byla to totiž hlavně neskutečná zábava. </br></br>
+    <img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="714" height="429" class="mapa">
+  </span>
+</p>
+</div>
+
+<div id="odkaz3">
 <div class="loga">
-<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="100  " height="100"> <img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="150  " height="150"> <img src="https://raw.githubusercontent.com/borekj/borekj.github.io/1deed6a32f4d8e7ce7d24b93488a2a352c7a9459/logo2.svg" alt="logo2" width="200" height="200">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="100  " height="100">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="150  " height="150">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="200" height="200">
+  </div>
 </div>
   </body>
 </html>
