--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head> 
     <body>
-<img src="https://github.com/borekj/borekj.github.io/blob/main/Trailtour_2.jpg?raw=true" alt="Mapa etap" class="logo" width = "100%">
 
+<img src="https://github.com/borekj/borekj.github.io/blob/main/Trailtour_2.jpg?raw=true" alt="Mapa etap" class="logo">
 <div class="container">
   <div><a href="#odkaz">Mapa</a></div>
   <div><a href="#odkaz2">Příběh</a></div>
@@ -80,19 +80,20 @@
   
   <u><label for="show" style="color:blue">Pokračovat?</label></u>
 
-  <span id="content"></br>Během posledních dvou týdnů spolu totiž zápasily dva brněnské kluby, Žabovřesky Brno a Tesla Brno. Za posledních 10 dní naběhali (každý) 3000 kilometrů a 10 dní člověkoběhů. Nebylo výjimkou, že někdo naběhal i 80 kilometrů za víkend – v závodním tempu. Každý bod hrál roli. V Tesle (za kterou běhám já) jsme o víkendu vypravili 30 lidí a 8 aut na pražské etapy, Žabiny zase v posledním týdnu posílaly jedno auto za druhým na krátké etapy na Moravu. Účastnil se každý, kdo měl nohy, v obou týmech to bylo přes 90 lidí. Někteří dali za posledních 10 dnů třeba 26 etap. Jezdilo se do Sokolova, na Šumavu, do Ústí nad Labem i do Rychlebek. Zkrátka všude, každý tam, kde mohl ještě přinést nejvíc bodů.</br></br>
-    Nebylo vůbec výjimkou vstávat v 5 ráno, ujet za den 700 km v autě a k tomu naběhat maraton během 5 etap za den – něco, co by nám na jaře zabralo aspoň tři dny. Poslední etapy se pravidelně běhaly s čelovkami. Nebudu počítat, kolik hektolitrů benzínu se spálilo, ale já sám jsem za posledních 10 dní najezdil 3000 a naběhal 210 km. Ekologické? Těžko. Náročné? Určitě. Zábavné? Neskutečně. Motivace konečně někoho porazit hnala dopředu úplně všechny. Bylo přitom skoro jedno, jestli má člověk za etapu 100 nebo 140 bodů, důležité byla hlavně kvantita.</br></br>
+  <span id="content"><br>
+    <img src="https://github.com/borekj/borekj.github.io/blob/main/trailtour3.jpg?raw=true" alt="Fotka běžce" width="341" height="228" class="vtextu" >Během posledních dvou týdnů spolu totiž zápasily dva brněnské kluby, Žabovřesky Brno a Tesla Brno. Za posledních 10 dní naběhali (každý) 3000 kilometrů a 10 dní člověkoběhů. Nebylo výjimkou, že někdo naběhal i 80 kilometrů za víkend – v závodním tempu. Každý bod hrál roli. V Tesle (za kterou běhám já) jsme o víkendu vypravili 30 lidí a 8 aut na pražské etapy, Žabiny zase v posledním týdnu posílaly jedno auto za druhým na krátké etapy na Moravu.  Účastnil se každý, kdo měl nohy, v obou týmech to bylo přes 90 lidí. Někteří dali za posledních 10 dnů třeba 26 etap. Jezdilo se do Sokolova, na Šumavu, do Ústí nad Labem i do Rychlebek. Zkrátka všude, každý tam, kde mohl ještě přinést nejvíc bodů.<br><br>
+    Nebylo vůbec výjimkou vstávat v 5 ráno, ujet za den 700 km v autě a k tomu naběhat maraton během 5 etap za den – něco, co by nám na jaře zabralo aspoň tři dny. Poslední etapy se pravidelně běhaly s čelovkami. Nebudu počítat, kolik hektolitrů benzínu se spálilo, ale já sám jsem za posledních 10 dní najezdil 3000 a naběhal 210 km. Ekologické? Těžko. Náročné? Určitě. Zábavné? Neskutečně. Motivace konečně někoho porazit hnala dopředu úplně všechny. Bylo přitom skoro jedno, jestli má člověk za etapu 100 nebo 140 bodů, důležité byla hlavně kvantita.<br><br>
 
-    V Tesle jsme nakonec skončili druzí, ale to nám nevadilo. Byla to totiž hlavně neskutečná zábava. </br></br>
-    <img src="https://github.com/borekj/borekj.github.io/blob/main/Screenshot%202020-10-12%20110842.png?raw=true" alt="Mapa etap" width="714" height="429" class="mapa">
+    V Tesle jsme nakonec skončili druzí, ale to nám nevadilo. Byla to totiž hlavně neskutečná zábava. <br><br>
+    
   </span>
 </p>
 </div>
 
 <div id="odkaz3">
 <div class="loga">
-<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="100  " height="100">
-<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="150  " height="150">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="100" height="100">
+<img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="150" height="150">
 <img src="https://raw.githubusercontent.com/borekj/borekj.github.io/23193472085614d60f860b9c2700ae2db8c659ca/logo2.svg" alt="logo2" width="200" height="200">
   </div>
 </div>
