--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <div class="map-wrapper">
       <div id="map"></div>
       </div>
+      <!--V pristim kroku bude doplnen o WFS nebo WMS shapefilu z geoserveru   -->
 
       <div class="text" id="odkaz">
       <p>Celkové statistiky Trailtour jsou vskutku impresivní. Závodníci naběhali celkem 72279 kilometrů, 2 255 785 vertikálních metrů a 290 dnů a 17 hodin během 8591 běhů. Jestli je ale jedna kategorie, která se opravdu vyhrotila, tak to byla soutěž českých klubů...
