snad uz naposledy

--- a/seznam_etap.html
+++ b/seznam_etap.html
@@ -24,7 +24,7 @@
           <th>Název etapy</th>
           <th>Délka</th>
           <th>Převýšení</th>
-          <th>Průměrný počet bodů</th>
+          <th>Počet bodů</th>
         </tr>
         <tr id=etapa1>
           <td>#1</td>
